testsuite/tests/typecheck/should_fail/T7809.stderr

T7809.hs:8:8: error:
    • Illegal polymorphic type: PolyId
      GHC doesn't yet support impredicative polymorphism
    • In the type signature:
        foo :: F PolyId
